# UGNN

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
UGNN/: README.md
UGNN/ablation/: run_ablation.py
UGNN/baselines/: models_acm.py  models_gpr.py  models_hetero.py  models_linkx.py  trainer.py
UGNN/ugnn/: __init__.py  config.py  datasets.py  main.py  models.py
baselines/: models_gnn.py  models_prognn.py  run_comparison.py
ugnn/: utils.py
