[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ugnn"
version = "1.0.0"
description = "UGNN: Uncertainty-Aware Graph Neural Network with Label-Leakage-Free Structural Priors for Node Classification on Heterophilous Graphs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Zhiguo Xiao, Junli Liu, Xinyao Cao"},
]
dependencies = [
    "torch>=1.11.0",
    "torch-geometric>=2.1.0",
    "torch-scatter>=2.0.9",
    "torch-sparse>=0.6.15",
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "networkx>=2.6",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "tqdm>=4.60",
    "ogb",
    "hyperopt>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[tool.setuptools.packages.find]
include = ["ugnn*", "baselines*", "ablation*"]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    "data/",
    "splits/",
    "__pycache__/",
    ".eggs/",
    "*.egg-info/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line length handled by formatter
    "E741",   # ambiguous variable name (common in math code)
    "F403",   # star imports (used in research code)
    "F405",   # star import usage
]

[tool.ruff.lint.isort]
known-first-party = ["ugnn", "baselines", "ablation", "experiments"]

[tool.ruff.format]
quote-style = "single"
